--- a/values.yaml
+++ b/values.yaml
@@ -15,13 +15,16 @@ image:
 
 podAnnotations: {}
 
-resources:
-  requests:
-    memory: "2500Mi"
-    cpu: "750m"
-  limits:
-    memory: "7500Mi"
-    cpu: "4000m"
+# Resource limits are not set by default, to give the user the ability to set specific resources.
+# If you do want to specify resources, uncomment the following lines,
+# adjust them as necessary, and remove the curly braces after 'resources:'.
+resources: {}
+#  requests:
+#    memory: ""
+#    cpu: ""
+#  limits:
+#    memory: ""
+#    cpu: ""
 
 tls:
   certificateSecret: terraform-enterprise-certificates
