--- a/values.yaml
+++ b/values.yaml
@@ -15,7 +15,7 @@ image:
 
 podAnnotations: {}
 
-# Resource limits are not set by default, to give the user the ability to set specific resources.
+# Resource limits are not set by default, to give users the ability to set specific resources.
 # If you do want to specify resources, uncomment the following lines,
 # adjust them as necessary, and remove the curly braces after 'resources:'.
 resources: {}
