--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,3 +1,6 @@
+# Copyright (c) HashiCorp, Inc.
+# SPDX-License-Identifier: MPL-2.0
+
 apiVersion: v2
 name: terraform-enterprise
 kubeVersion: ">=1.21.0-0"
