--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,3 +1,8 @@
+{{/*
+Copyright (c) HashiCorp, Inc.
+SPDX-License-Identifier: MPL-2.0
+*/}}
+
 {{- if and .Values.tls.certData .Values.tls.keyData }}
 apiVersion: v1
 kind: Secret
