--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -43,6 +43,9 @@ spec:
       imagePullSecrets:
        - name: {{ .Values.image.pullSecret }}
       serviceAccountName: {{ .Release.Namespace }}
+      initContainers:
+        {{ toYaml .Values.initContainers | nindent 8}}
+        {{- end }}
       containers: 
       - name: terraform-enterprise
         image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
