--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -7,10 +7,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: terraform-enterprise
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: https-port
+      port: {{ .Values.service.port }}
+      {{- if eq .Values.service.type "NodePort" }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
       targetPort: {{ .Values.tfe.privateHttpsPort }}
   selector:
     app: terraform-enterprise
