--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -45,11 +45,10 @@ spec:
       serviceAccountName: {{ .Release.Namespace }}
       initContainers:
         {{ toYaml .Values.initContainers | nindent 8}}
-        {{- end }}
       containers: 
       - name: terraform-enterprise
         image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy:  {{ .Values.image.pullPolicy }}
         env:
         {{- include "helpers.list-env-variables" . | indent 8 }}
         - name: TFE_RUN_PIPELINE_KUBERNETES_NAMESPACE
