comment env-secrets.yaml

--- a/env-secrets.yaml
+++ b/env-secrets.yaml
@@ -1,4 +1,4 @@
-TFE_ENCRYPTION_PASSWORD: "SECRET"
+# TFE_ENCRYPTION_PASSWORD: "SECRET"
 # TFE_DATABASE_PASSWORD: ""
 # TFE_OBJECT_STORAGE_AZURE_ACCOUNT_KEY: ""
 # TFE_OBJECT_STORAGE_GOOGLE_CREDENTIALS: ""
