--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -35,4 +35,11 @@ metadata:
   name: terraform-enterprise-env-secrets
   namespace: {{ .Release.Namespace }}
 data:
-{{ (.Files.Glob "env-secrets.yaml").AsSecrets | indent 2 }}
+{{- include "helpers.list-env-secrets" . | indent 2 }}
+{{- $files := .Files }}
+{{- range .Values.env.secretRefs }}
+{{- if eq .name "terraform-enterprise-env-secrets" }}
+{{ ($files.Glob .filepath).AsSecrets | indent 2 }}
+{{- end }}
+{{- end }}
+
