--- a/values.yaml
+++ b/values.yaml
@@ -149,10 +149,45 @@ service:
   nodePort: 32443 # if service.type is NodePort value will be set
 
 env:
-  configMaps:
+  secrets: {}
+    # TFE_ENCRYPTION_PASSWORD: "SECRET"
+    # TFE_DATABASE_PASSWORD: ""
+    # TFE_OBJECT_STORAGE_AZURE_ACCOUNT_KEY: ""
+    # TFE_OBJECT_STORAGE_GOOGLE_CREDENTIALS: ""
+    # TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY: ""
+    # TFE_VAULT_SECRET_ID: ""
+  variables: {}
+    # TFE_CAPACITY_CONCURRENCY: ""
+    # TFE_CAPACITY_CPU: ""
+    # TFE_CAPACITY_MEMORY: ""
+    # TFE_DATABASE_HOST: ""
+    # TFE_DATABASE_NAME: ""
+    # TFE_DATABASE_PARAMETERS: ""
+    # TFE_DATABASE_USER: ""
+    # TFE_DISK_PATH: ""
+    # TFE_OBJECT_STORAGE_TYPE: ""
+    # TFE_OBJECT_STORAGE_AZURE_ACCOUNT_NAME: ""
+    # TFE_OBJECT_STORAGE_AZURE_CONTAINER: ""
+    # TFE_OBJECT_STORAGE_AZURE_ENDPOINT: ""
+    # TFE_OBJECT_STORAGE_GOOGLE_BUCKET: ""
+    # TFE_OBJECT_STORAGE_GOOGLE_PROJECT: ""
+    # TFE_OBJECT_STORAGE_S3_ACCESS_KEY_ID: ""
+    # TFE_OBJECT_STORAGE_S3_BUCKET: ""
+    # TFE_OBJECT_STORAGE_S3_ENDPOINT: ""
+    # TFE_OBJECT_STORAGE_S3_REGION: ""
+    # TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION: ""
+    # TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION_KMS_KEY_ID: ""
+    # TFE_OBJECT_STORAGE_S3_USE_INSTANCE_PROFILE: ""
+    # TFE_REDIS_URL: ""
+    # TFE_TLS_CIPHERS: ""
+    # TFE_VAULT_ADDRESS: ""
+    # TFE_VAULT_NAMESPACE: ""
+    # TFE_VAULT_PATH: ""
+    # TFE_VAULT_ROLE_ID: ""
+  configMapRefs:
     - name: terraform-enterprise-env-config
-    # - name: config-map-name
-  secrets:
+      filepath: "env-config.yaml"
+  secretRefs:
     - name: terraform-enterprise-env-secrets
-    # - name: secret-name
+      filepath: env-secrets.yaml
 
