--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -36,10 +36,5 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data:
 {{- include "helpers.list-env-secrets" . | indent 2 }}
-{{- $files := .Files }}
-{{- range .Values.env.secretRefs }}
-{{- if eq .name "terraform-enterprise-env-secrets" }}
-{{ ($files.Glob .filepath).AsSecrets | indent 2 }}
-{{- end }}
-{{- end }}
+{{ (.Files.Glob .Values.env.secretsFilePath ).AsSecrets | indent 2}}
 
