--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -14,6 +14,7 @@ data:
   tls.crt: {{ .Values.tls.certData }}
   tls.key: {{ .Values.tls.keyData }}
 {{- end }}
+
 {{- if .Values.tls.caCertData }}
 ---
 apiVersion: v1
@@ -25,3 +26,15 @@ metadata:
 data:
   {{ .Values.tls.caCertFileName }}: {{ .Values.tls.caCertData }}
 {{- end }}
+
+---
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: terraform-enterprise-env-secrets
+  namespace: {{ .Release.Namespace }}
+data:
+{{- include "helpers.list-env-secrets" . | indent 2 }}
+{{ (.Files.Glob .Values.env.secretsFilePath ).AsSecrets | indent 2 }}
+
