--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -36,5 +36,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data:
 {{- include "helpers.list-env-secrets" . | indent 2 }}
-{{ (.Files.Glob .Values.env.secretsFilePath ).AsSecrets | indent 2 }}
+{{- if .Values.env.secretsFilePath }}
+{{- include "helpers.enc-b64-secrets-file" . | indent 2 }}
+{{- end }}
 
