--- a/values.yaml
+++ b/values.yaml
@@ -159,6 +159,7 @@ env:
     # TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY: ""
     # TFE_VAULT_SECRET_ID: ""
   variables: {}
+    # TFE_OPERATIONAL_MODE: external
     # TFE_CAPACITY_CONCURRENCY: ""
     # TFE_CAPACITY_CPU: ""
     # TFE_CAPACITY_MEMORY: ""
