Add license env variable

--- a/env-secrets.yaml
+++ b/env-secrets.yaml
@@ -4,3 +4,4 @@
 # TFE_OBJECT_STORAGE_GOOGLE_CREDENTIALS: ""
 # TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY: ""
 # TFE_VAULT_SECRET_ID: ""
+# TFE_LICENSE: ""
