--- a/values.yaml
+++ b/values.yaml
@@ -13,9 +13,9 @@ imagePullSecrets:
 
 # Image sets the repo, name and tag of the Terraform Enterprise image to use.
 image:
- repository: quay.io
- name: hashicorp/terraform-enterprise
- tag: latest
+ repository: terraform-enterprise-beta.terraform.io
+ name: terraform-enterprise
+ tag: beta-1
  pullPolicy: Always
 
 pod:
