add env vars and documentation

--- a/values.yaml
+++ b/values.yaml
@@ -172,6 +172,8 @@ env:
     # TFE_DATABASE_PARAMETERS: ""
     # TFE_DATABASE_USER: ""
     # TFE_DISK_PATH: ""
+    # TFE_RUN_PIPELINE_KUBERNETES_DEBUG_ENABLED: false
+    # TFE_RUN_PIPELINE_KUBERNETES_DEBUG_JOBS_TTL: 86400
     # TFE_OBJECT_STORAGE_TYPE: ""
     # TFE_OBJECT_STORAGE_AZURE_ACCOUNT_NAME: ""
     # TFE_OBJECT_STORAGE_AZURE_CONTAINER: ""
