--- a/templates/rbac.yaml
+++ b/templates/rbac.yaml
@@ -9,6 +9,10 @@ kind: ServiceAccount
 metadata:
   name: {{ .Release.Namespace }}
   namespace: {{ .Release.Namespace }}
+{{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+{{- end }}
 ---
 apiVersion: v1
 kind: Namespace
