--- a/values.yaml
+++ b/values.yaml
@@ -44,6 +44,10 @@ tls:
   # caCertData:
 
 tfe:
+  metrics:
+    enable: false
+    httpPort: 9090
+    httpsPort: 9091
   privateHttpPort: 8080
   privateHttpsPort: 8443
 
