Update helm variables

--- a/env-config.yaml
+++ b/env-config.yaml
@@ -1,6 +1,7 @@
 # Copyright (c) HashiCorp, Inc.
 # SPDX-License-Identifier: MPL-2.0
 
+# TFE_HOSTNAME: ""
 # TFE_CAPACITY_CONCURRENCY: ""
 # TFE_CAPACITY_CPU: ""
 # TFE_CAPACITY_MEMORY: ""
@@ -24,7 +25,10 @@
 # TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION: ""
 # TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION_KMS_KEY_ID: ""
 # TFE_OBJECT_STORAGE_S3_USE_INSTANCE_PROFILE: ""
-# TFE_REDIS_URL: ""
+# TFE_REDIS_USE_TLS: ""
+# TFE_REDIS_USER: ""
+# TFE_REDIS_HOST: ""
+# TFE_REDIS_USE_AUTH: ""
 # TFE_TLS_CIPHERS: ""
 # TFE_VAULT_ADDRESS: ""
 # TFE_VAULT_NAMESPACE: ""
