--- a/env-secrets.yaml
+++ b/env-secrets.yaml
@@ -7,4 +7,5 @@
 # TFE_OBJECT_STORAGE_GOOGLE_CREDENTIALS: ""
 # TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY: ""
 # TFE_VAULT_SECRET_ID: ""
+# TFE_REDIS_PASSWORD: ""
 # TFE_LICENSE: ""
