Updating the registry address to point to the official registry.  generalizing the image tag

--- a/values.yaml
+++ b/values.yaml
@@ -13,9 +13,9 @@ imagePullSecrets:
 
 # Image sets the repo, name and tag of the Terraform Enterprise image to use.
 image:
- repository: terraform-enterprise-beta.terraform.io
+ repository: images.releases.hashicorp.com
  name: terraform-enterprise
- tag: beta-1
+ tag: <vYYYYMM-#>
  pullPolicy: Always
 
 pod:
