--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -7,6 +7,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: terraform-enterprise
+  namespace: {{ .Release.Namespace }}
   labels:
     app: terraform-enterprise
 spec:
