--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: terraform-enterprise
+  namespace: {{ .Release.Namespace }}
   {{- with .Values.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
