Adds support for passing in pod security configuration from values.

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -57,6 +57,8 @@ spec:
       - name: terraform-enterprise
         image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        securityContext:
+        {{- toYaml .Values.pod.securityContext | nindent 10 }}
         envFrom:
           - configMapRef:
               name: terraform-enterprise-env-config
