moving the pod securitycontext value to the container namespace.

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -58,7 +58,7 @@ spec:
         image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
-        {{- toYaml .Values.pod.securityContext | nindent 10 }}
+        {{- toYaml .Values.container.securityContext | nindent 10 }}
         envFrom:
           - configMapRef:
               name: terraform-enterprise-env-config
