--- a/templates/config-map.yaml
+++ b/templates/config-map.yaml
@@ -24,6 +24,9 @@ data:
   TFE_METRICS_HTTP_PORT: "{{ .Values.tfe.metrics.httpPort }}"
   TFE_METRICS_HTTPS_PORT: "{{ .Values.tfe.metrics.httpsPort }}"
   {{- end }}
+  {{- if .Values.tfe.agentWorkerPodTemplate }}
+  TFE_RUN_PIPELINE_KUBERNETES_POD_TEMPLATE: {{ .Values.tfe.agentWorkerPodTemplate | b64enc }}
+  {{- end }}
 {{- if .Values.env.configFilePath }}
 {{ .Files.Get .Values.env.configFilePath | indent 2 }}
 {{- end }}
