--- a/values.yaml
+++ b/values.yaml
@@ -159,8 +159,16 @@ service:
   nodePort: 32443 # if service.type is NodePort value will be set
 
 # Custom pod template to define your own specifications for the creation of the agent worker pods.
-# This must be a valid `corev1.PodTemplateSpec` and should be provided in JSON format.
-agentWorkerPodTemplate: {}
+# This should be a JSON string representing a valid corev1.PodTemplateSpec.
+# For example:
+# {
+#   "metadata": {},
+#   "spec": {
+#     "containers": [],
+#     "nodeSelector": {}
+#   }
+# }
+agentWorkerPodTemplate: "{}"
 
 env:
   # configFilePath: env-config.yaml
