--- a/values.yaml
+++ b/values.yaml
@@ -159,7 +159,8 @@ service:
   nodePort: 32443 # if service.type is NodePort value will be set
 
 # Custom pod template to define your own specifications for the creation of the agent worker pods.
-# This should be a JSON string representing a valid corev1.PodTemplateSpec.
+# This should be a JSON string representing a valid corev1.PodTemplateSpec. This format is documented
+# at https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-template-v1/#PodTemplateSpec).
 # For example:
 # {
 #   "metadata": {},
