--- a/values.yaml
+++ b/values.yaml
@@ -159,16 +159,13 @@ service:
   nodePort: 32443 # if service.type is NodePort value will be set
 
 # Custom pod template to define your own specifications for the creation of the agent worker pods.
-# This should be a JSON string representing a valid corev1.PodTemplateSpec.
-# For example:
-# {
-#   "metadata": {},
-#   "spec": {
-#     "containers": [],
-#     "nodeSelector": {}
-#   }
-# }
-agentWorkerPodTemplate: ""
+# This should be YAML representing a valid corev1.PodTemplateSpec. This format is documented
+# at https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-template-v1/#PodTemplateSpec.
+agentWorkerPodTemplate: {}
+  # metadata: {}
+  # spec:
+  #   containers: []
+  #   nodeSelector: {}
 
 env:
   # configFilePath: env-config.yaml
