--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -36,7 +36,17 @@ spec:
       tolerations:
         {{- toYaml .Values.tolerations | nindent 8 }}
       securityContext:
+        {{- if and .Values.openshift.enabled (not .Values.securityContext) }}
+        seccompProfile:
+          type: RuntimeDefault
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+            - ALL
+        runAsNonRoot: true
+        {{- else }}
         {{- toYaml .Values.securityContext | nindent 8 }}
+        {{- end }}
       volumes:
         - name: certificates
           secret:
