--- a/values.yaml
+++ b/values.yaml
@@ -168,6 +168,11 @@ agentWorkerPodTemplate: {}
   #   containers: []
   #   nodeSelector: {}
 
+# Configuration for running this Helm chart on Red Hat OpenShift platform.
+openshift:
+  # If true, the Helm chart will create necessary configuration for running its components on OpenShift.
+  enabled: false
+
 env:
   # configFilePath: env-config.yaml
   # secretsFilePath: # env-secrets.yaml
