--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -36,17 +36,7 @@ spec:
       tolerations:
         {{- toYaml .Values.tolerations | nindent 8 }}
       securityContext:
-        {{- if and .Values.openshift.enabled (not .Values.securityContext) }}
-        seccompProfile:
-          type: RuntimeDefault
-        allowPrivilegeEscalation: false
-        capabilities:
-          drop:
-            - ALL
-        runAsNonRoot: true
-        {{- else }}
         {{- toYaml .Values.securityContext | nindent 8 }}
-        {{- end }}
       volumes:
         - name: certificates
           secret:
@@ -68,7 +58,17 @@ spec:
         image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
+        {{- if and .Values.openshift.enabled (not .Values.container.securityContext) }}
+          seccompProfile:
+            type: RuntimeDefault
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
+          runAsNonRoot: true
+        {{- else }}
         {{- toYaml .Values.container.securityContext | nindent 10 }}
+        {{- end }}
         envFrom:
           - configMapRef:
               name: terraform-enterprise-env-config
