--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -58,7 +58,17 @@ spec:
         image: {{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
+        {{- if and .Values.openshift.enabled (not .Values.container.securityContext) }}
+          seccompProfile:
+            type: RuntimeDefault
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
+          runAsNonRoot: true
+        {{- else }}
         {{- toYaml .Values.container.securityContext | nindent 10 }}
+        {{- end }}
         envFrom:
           - configMapRef:
               name: terraform-enterprise-env-config
