--- a/values.yaml
+++ b/values.yaml
@@ -39,6 +39,9 @@ resources:
   #   cpu: ""
 
 # TLS for end-to-end encrypted transport
+# Including secrets in Helm charts can expose sensitive data if the charts are 
+# stored in a version control system like Git, where they might be accessible 
+# to unauthorized users. The values given below are for testing purposes only.
 tls:
   certificateSecret: terraform-enterprise-certificates
   caCertBaseDir: /etc/ssl/certs
@@ -180,6 +183,7 @@ env:
   #   - name:
   # secretRefs:
   #    - name:
+
   secrets: {}
     # TFE_ENCRYPTION_PASSWORD: "SECRET"
     # TFE_DATABASE_PASSWORD: ""
