--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -18,6 +18,8 @@ spec:
   template:
     metadata:
       annotations:
+        checksum/env-config: {{ include (print $.Template.BasePath "/config-map.yaml") . | sha256sum }}
+        checksum/secrets: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
         {{- if .Values.pod.annotations }}
         {{- toYaml .Values.pod.annotations | nindent 8 }}
         {{- end }}
