--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -30,6 +30,9 @@ spec:
         {{- end }}
       labels:
         app: terraform-enterprise
+        {{- if .Values.pod.extraLabels }}
+        {{- toYaml .Values.pod.extraLabels | nindent 8 }}
+        {{- end }}
     spec:
       nodeSelector:
         {{- toYaml .Values.nodeSelector | nindent 8 }}
