--- a/Chart.yaml
+++ b/Chart.yaml
@@ -7,4 +7,4 @@ kubeVersion: ">=1.21.0-0"
 description: Official HashiCorp Terraform-Enterprise Chart
 type: application
 version: 1.3.0
-appVersion: "1.16.0"
+appVersion: "v202406-1"
