ensure that service service certificates are only enabled when openshift.enabled is also true

--- a/templates/config-map.yaml
+++ b/templates/config-map.yaml
@@ -34,7 +34,7 @@ data:
 {{ .Files.Get .Values.env.configFilePath | indent 2 }}
 {{- end }}
 
-{{- if .Values.openshift.serviceServingCertificates }}
+{{- if and .Values.openshift.enabled .Values.openshift.serviceServingCertificates }}
 ---
 apiVersion: v1
 kind: ConfigMap
