--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -12,7 +12,7 @@ metadata:
     {{- with .Values.service.annotations }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
-    {{- if .Values.openshift.serviceServingCertificates }}
+    {{- if and .Values.openshift.enabled .Values.openshift.serviceServingCertificates }}
       service.beta.openshift.io/serving-cert-secret-name: terraform-enterprise-certificates
     {{- end }}
 spec:
